# YTMSignTool

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
.cursor/rules/: karpathy-guidelines.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: sign_keys.json
images/: YTM32B1ME05_Secure_Boot.hex  YTM32_Secure_Boot_Prepare.hex  prepare.hex  signed.hex  signed.s19  unsigned.hex  unsigned.s19
src/: cli.rs  crypto.rs  image.rs  keys.rs  main.rs  prepare.rs  secure_image.rs  types.rs
