[package]
name = "ytm_sign_tool"
version = "0.1.1"
edition = "2021"
build = "build.rs"
description = "YTM32 MCU Firmware Signing Tool for Secure Boot"
authors = ["HanG"]
license = "MIT"
repository = "https://github.com/SunHanGYvv/YTMSignTool"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
hex = "0.4"
aes = "0.9"
anyhow = "1.0"
rand = "0.10"
log = "0.4"
env_logger = "0.11"
srec = "0.2"
ihex = "3.0"

[profile.release]
opt-level = 3
lto = true
